# vidrag

./: .gitignore  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  SAAS_BUILD.md  cli.py  config.py  index.json  ingest.py  local_vision.py  main.py  phase0_repo.md  phase1_setup.md  phase2_ingestion.md  phase3_query.md  phase4_cli.md  phase5_webui.md  phase6_local_models.md  phase7_deployment.md  phase8_documentation.md  pyproject.toml  query.py  requirements.txt  space.yaml  webui.py
backend/: main.py
examples/: compare.py
frontend/: package-lock.json
frontend/src/app/: page.tsx
